# api-gateway

./: README.md  project_structure.txt  pyproject.toml
scripts/: generate_token.py
src/: main.py
src/api/: health.py  metrics.py
src/core/: auth.py  logging.py  monitoring.py  rate_limit.py  routing.py
tests/: test_routing.py
